update products gui

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,6 +46,21 @@
   border-radius: 3px;
 }
 
+.border-right {
+  border-right: 1px solid #ddd;
+}
+.borders {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  margin: -1px;
+}
+.border-left {
+  border-left: 1px solid #ddd;
+}
+
+.btn:focus{
+  background:olive;
+}
 
 @keyframes App-logo-spin {
   from {
