--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,10 +58,10 @@
   border-left: 1px solid #ddd;
 }
 
-.btn-primary:hover,.btn-primary:checked, .btn-primary:active, .btn-primary:visited {
+.btn-primary:hover,.btn-primary:checked, .btn-primary:active, .btn-primary:focus, .btn-primary:visited {
   color:white !important;
   background-color: #ec9a2a !important;
-  box-shadow: #ec9a2a !important;
+  box-shadow: 5px 8px #888888 !important;
 }
 
 @keyframes App-logo-spin {
