--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,74 +1,93 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 .NavBar-Background {
-  background-color: #143642;
- 
+    background-color: #143642;
 }
-.NavBar-Background> div > span {
-  color:#ec9a2a !important;
+
+.NavBar-Background>div>span {
+    color: #ec9a2a !important;
 }
-.NavBar-Background> div  button {
-  color:#ec9a2a !important;
-  text-decoration: none;
+
+.NavBar-Background>div button {
+    color: #ec9a2a !important;
+    text-decoration: none;
 }
-.NavBar-Background> div  small {
-  color:#ffffff !important;
-  background-color: #0f8b8b;
-  padding: 5px;
-  border-radius: 3px;
+
+.NavBar-Background>div small {
+    color: #ffffff !important;
+    background-color: #0f8b8b;
+    padding: 5px;
+    border-radius: 3px;
 }
 
 .border-right {
-  border-right: 1px solid #ddd;
-}
-.borders {
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  margin: -1px;
-}
-.border-left {
-  border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
 }
 
-.btn-primary:hover,.btn-primary:checked, .btn-primary:active, .btn-primary:focus, .btn-primary:visited {
-  color:white !important;
-  background-color: #ec9a2a !important;
-  box-shadow: 5px 8px #888888 !important;
+.borders {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    margin: -1px;
+}
+
+.border-left {
+    border-left: 1px solid #ddd;
+}
+
+.btn-primary:hover,
+.btn-primary:checked,
+.btn-primary:active,
+.btn-primary:focus,
+.btn-primary:visited {
+    color: white !important;
+    background-color: #ec9a2a !important;
+    box-shadow: 5px 8px #888888 !important;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.btn-outline-yellow {
+    background-color: white;
+    color: #EC9A29;
+    border: 2px solid #EC9A29;
+}
+
+.btn-outline-yellow:hover {
+    background-color: #EC9A29;
+    color: black;
 }
