--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,11 @@
     pointer-events: none;
 }
 
+.myModalEnd{
+    width: 100%;
+    text-align: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
     .App-logo {
         animation: App-logo-spin infinite 20s linear;
