--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,11 @@
     text-align: center;
 }
 
+.containerProdRequest {
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
     .App-logo {
         animation: App-logo-spin infinite 20s linear;
