--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,10 @@
     text-align: center;
 }
 
+.colBasket{
+    text-align: right;
+    margin-right: 2rem;
+}
 
 
 @media only screen and (min-width: 1200px) {
