--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,11 +53,6 @@
     color: #ec9a2a !important;
 }
 
-.NavBar-Background>div button {
-    color: #ec9a2a !important;
-    text-decoration: none;
-}
-
 .NavBar-Background>div .callandarButton {
     color: #ffffff !important;
     background-color: #0f8b8b;
@@ -71,6 +66,16 @@
 
 .priority {
     z-index: 100;
+}
+
+.btn-login{
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.btn-reg{
+    font-size: 20px;
+    text-decoration: none;
 }
 
 .borders {
@@ -95,6 +100,18 @@
     color: black !important;
     font-weight: 700 !important;
     border: 0px solid #ec9a2a !important;
+}
+
+.btn-hour,
+ .btn-hour:hover,
+ .btn-hour:focus,
+ .btn-hour:active,
+ .btn-hour:visited,
+ .btn-hour:checked {
+    border: 0px solid #ec9a2a !important;
+    background-color: #0f8b8b;
+    font-size: 17px;
+    color: white !important;
 }
 
 .btn-primary {
@@ -208,6 +225,7 @@
     margin: 100px auto;
     border-radius: 10px;
     background-color: #143642;
+    text-decoration: none;
 }
 
 .loginButton {
