navbar link to home page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,6 +16,10 @@
     text-align: right;
     margin-right: 2rem;
 }
+.nounderline{
+    text-decoration: none !important;
+    color:#ec9a2a !important;
+}
 
 @media only screen and (min-width: 1200px) {
     .containerProdRequest {
