--- a/client/src/App.css
+++ b/client/src/App.css
@@ -261,6 +261,18 @@
     color: black;
 }
 
+.greyLink {
+    border: 0px solid #797877 !important;
+    background-color: "secondary";
+    color: white;
+}
+
+.greyLink:hover,
+.greyLink:focus {
+    background-color: rgb(90, 89, 89);
+    color: white;
+}
+
 .text-yellow {
     color: #ec9a2a !important;
 }
