--- a/client/src/App.css
+++ b/client/src/App.css
@@ -226,7 +226,7 @@
 }
 
 .accordion-button:hover, .accordion-button:focus{
-    background-color:#19E6E6 !important;
+    background-color:#75F0F0 !important;
 }
 
 .btn-yellow:hover,
