--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,13 +22,6 @@
     color: #ec9a2a !important;
 }
 
-@media only screen and (min-width: 1200px) {
-    .containerProdRequest {
-        padding-left: 250px;
-        padding-right: 250px;
-    }
-}
-
 @media (prefers-reduced-motion: no-preference) {
     .App-logo {
         animation: App-logo-spin infinite 20s linear;
@@ -50,11 +43,11 @@
     color: #61dafb;
 }
 
-.completed-pill{
+.completed-pill {
     background-color: #20566A !important;
 }
 
-.pending-pill{
+.pending-pill {
     background-color: #F3BD72 !important;
 }
 
@@ -221,25 +214,24 @@
     color: white;
 }
 
-.accordion-button{
-    background-color:#EDEDED !important;
+.accordion-button {
+    background-color: #EDEDED !important;
 }
 
-.alertAccHeader{
-    
+.alertAccHeader {}
+
+.accordion-button:hover,
+.accordion-button:focus {
+    background-color: #75F0F0 !important;
 }
 
-.accordion-button:hover, .accordion-button:focus{
-    background-color:#75F0F0 !important;
-}
-
-.alertHeader{
+.alertHeader {
     background-color: #FFB3B3;
     font-weight: 500;
     font-size: 18px;
 }
 
-.contactButton{
+.contactButton {
     background-color: #0C7373;
     color: white;
     font-weight: 400;
@@ -266,15 +258,14 @@
     display: flex;
 }
 
-@media only screen and (min-width: 1300px){
-    .login-form{
+@media only screen and (min-width: 1300px) {
+    .login-form {
         width: 40%;
         height: 70%;
     }
-
 }
 
-.myGif{
+.myGif {
     height: 500px;
     width: 400px;
 }
@@ -333,18 +324,20 @@
     border-bottom: none;
 }
 
+
 /* CSS used here will be applied after bootstrap.css */
+
 .mynotify {
     z-index: 999999;
     right: 10px;
     background-color: #edeaea;
 }
 
-.form_wrapper{
+.form_wrapper {
     margin: 0px 20px;
 }
 
-.col{
+.col {
     margin-left: 15px;
     margin-right: 15px;
 }
