--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,18 @@
     pointer-events: none;
 }
 
+/*For the farmer*/
+
+.list-group-item{
+    background-color:#f2f2f2;
+    border-color: rgb(248, 180, 78);
+}
+
+.list-group-item.active{
+    background-color:rgb(248, 180, 78);
+    border-color: rgb(248, 180, 78);
+    color: black;
+}
 .myModalEnd {
     width: 100%;
     text-align: center;
@@ -341,3 +353,5 @@
     margin-left: 15px;
     margin-right: 15px;
 }
+
+
