--- a/client/src/App.css
+++ b/client/src/App.css
@@ -230,7 +230,10 @@
     background-color: #EDEDED !important;
 }
 
-.alertAccHeader {}
+.alertAccHeader >.accordion-button:hover,
+.accordion-button:focus {
+    background-color: #FFCCCC !important;
+}
 
 .accordion-button:hover,
 .accordion-button:focus {
@@ -247,7 +250,7 @@
     background-color: #0C7373;
     color: white;
     font-weight: 400;
-    font-size: 18;
+    font-size: 17;
 }
 
 .btn-yellow:hover,
