--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,18 +7,20 @@
     pointer-events: none;
 }
 
+
 /*For the farmer*/
 
-.list-group-item{
-    background-color:#f2f2f2;
+.list-group-item {
+    background-color: #f2f2f2;
     border-color: rgb(248, 180, 78);
 }
 
-.list-group-item.active{
-    background-color:rgb(248, 180, 78);
+.list-group-item.active {
+    background-color: rgb(248, 180, 78);
     border-color: rgb(248, 180, 78);
     color: black;
 }
+
 .myModalEnd {
     width: 100%;
     text-align: center;
@@ -355,3 +357,18 @@
 }
 
 
+/* modal claim date */
+
+.ui.small.icon.button {
+    width: 2em;
+    height: 2em;
+    border: 1px solid #143642;
+}
+
+.ui.ui.small.icon.button::before {
+    content: "\f067";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+}
