--- a/client/src/App.css
+++ b/client/src/App.css
@@ -117,7 +117,6 @@
     /*box-shadow: 5px 8px #888888 !important;*/
     box-shadow: 0px 0px #888888 !important;
     color: black !important;
-    font-weight: 700 !important;
     border: 0px solid #ec9a2a !important;
 }
 
@@ -129,14 +128,12 @@
 .btn-hour:checked {
     border: 0px solid #ec9a2a !important;
     background-color: #0f8b8b;
-    font-size: 17px;
     color: white !important;
 }
 
 .btn-primary {
     border: 0px solid #ec9a2a !important;
     background-color: #FFDEAD;
-    font-size: 20px;
     font-weight: 600;
     color: #CE8012;
 }
@@ -368,4 +365,9 @@
 .col {
     margin-left: 15px;
     margin-right: 15px;
+}
+
+.important-buttons-product-list {
+    background-color: white;
+    border: solid 2px #ec9a2a !important;
 }
