--- a/client/src/App.css
+++ b/client/src/App.css
@@ -426,12 +426,12 @@
     border-bottom: none;
 }
 
-
 /* CSS used here will be applied after bootstrap.css */
 
 .mynotify {
-    z-index: 999999;
-    right: 10px;
+    position: fixed;
+    right: 12px;
+    top: 40px;
     background-color: #edeaea;
 }
 
